--- a/PAC-MAN/PAC-MAN.vcxproj.filters
+++ b/PAC-MAN/PAC-MAN.vcxproj.filters
@@ -33,9 +33,6 @@
     <ClCompile Include="queue.c">
       <Filter>File di origine</Filter>
     </ClCompile>
-    <ClCompile Include="ghosts.c">
-      <Filter>File di origine</Filter>
-    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="display.h">
@@ -65,5 +62,10 @@
     <ClInclude Include="curses.h">
       <Filter>File di intestazione</Filter>
     </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <Object Include="..\..\..\..\..\..\Downloads\ghosts_obj\ghosts.obj">
+      <Filter>File di origine</Filter>
+    </Object>
   </ItemGroup>
 </Project>
