--- a/PAC-MAN/PAC-MAN.vcxproj.filters
+++ b/PAC-MAN/PAC-MAN.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClCompile Include="queue.c">
       <Filter>File di origine</Filter>
     </ClCompile>
+    <ClCompile Include="ghosts.c">
+      <Filter>File di origine</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="display.h">
@@ -62,10 +65,5 @@
     <ClInclude Include="curses.h">
       <Filter>File di intestazione</Filter>
     </ClInclude>
-  </ItemGroup>
-  <ItemGroup>
-    <Object Include="ghosts.obj">
-      <Filter>File di origine</Filter>
-    </Object>
   </ItemGroup>
 </Project>
