--- a/PAC-MAN/PAC-MAN.vcxproj.filters
+++ b/PAC-MAN/PAC-MAN.vcxproj.filters
@@ -36,6 +36,12 @@
     <ClCompile Include="ghosts.c">
       <Filter>File di origine</Filter>
     </ClCompile>
+    <ClCompile Include="Fantasmoni.c">
+      <Filter>File di origine</Filter>
+    </ClCompile>
+    <ClCompile Include="Fantasmoni_mic.c">
+      <Filter>File di origine</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="display.h">
